[gd_scene load_steps=8 format=3 uid="uid://cybp46vb5wblt"]

[ext_resource type="Script" path="res://Menus/CreatureSummary.gd" id="1_6r03a"]
[ext_resource type="Theme" uid="uid://8reuecd1io3g" path="res://Battle/UI/BattleUI.tres" id="1_cljlw"]
[ext_resource type="PackedScene" uid="uid://b10n7jankcsc1" path="res://UI/CreatureStats.tscn" id="2_2ldh2"]
[ext_resource type="Texture2D" uid="uid://dgig17q1rxhn0" path="res://sprites/icons/big_boost_icon.png" id="3_m3g62"]
[ext_resource type="PackedScene" uid="uid://ddwtgmifyeeon" path="res://Menus/CostButton.tscn" id="4_4fe2k"]
[ext_resource type="Script" path="res://Menus/LevelUpButton.gd" id="6_2cbse"]
[ext_resource type="PackedScene" uid="uid://c434ifxltx2da" path="res://Menus/LearnNewMove.tscn" id="8_i1cfh"]

[node name="Margins" type="MarginContainer"]
offset_left = 384.0
offset_top = 192.0
offset_right = 1664.0
offset_bottom = 692.0
theme = ExtResource("1_cljlw")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_6r03a")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Window" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="StatsMargin" type="MarginContainer" parent="Panel/Window"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CreatureStats" parent="Panel/Window/StatsMargin" instance=ExtResource("2_2ldh2")]
unique_name_in_owner = true
layout_mode = 2

[node name="BigBoost" type="TextureButton" parent="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Health" index="3" groups=["BigBoosts"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_m3g62")
ignore_texture_size = true
stretch_mode = 4

[node name="BigBoost" type="TextureButton" parent="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Attack" index="3" groups=["BigBoosts"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_m3g62")
ignore_texture_size = true
stretch_mode = 4

[node name="BigBoost" type="TextureButton" parent="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Speed" index="3" groups=["BigBoosts"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_m3g62")
ignore_texture_size = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="Panel/Window"]
layout_mode = 2

[node name="Moves" type="HBoxContainer" parent="Panel/Window/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 140

[node name="LearnNewMove" parent="Panel/Window/MarginContainer/Moves" instance=ExtResource("8_i1cfh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="LevelUp" parent="Panel/Window/MarginContainer/Moves" instance=ExtResource("4_4fe2k")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_2cbse")
title = "Level Up"

[connection signal="new_move_confirmed" from="Panel/Window/MarginContainer/Moves/LearnNewMove" to="." method="_on_learn_new_move_new_move_confirmed"]
[connection signal="pressed" from="Panel/Window/MarginContainer/Moves/LevelUp" to="." method="_on_level_up_pressed"]

[editable path="Panel/Window/StatsMargin/CreatureStats"]
[editable path="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Health"]
[editable path="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Attack"]
[editable path="Panel/Window/StatsMargin/CreatureStats/Background/Profile/Stats/Control/Speed"]
[editable path="Panel/Window/MarginContainer/Moves/LearnNewMove"]
[editable path="Panel/Window/MarginContainer/Moves/LevelUp"]
